--- a/index.html
+++ b/index.html
@@ -91,6 +91,52 @@
       height: 200px;
       background-color: #7E998A;
     }
+    /* The Box Model */
+    #blockA,
+    #blockB,
+    #blockC {
+      padding: 10px;
+      margin: 0;
+      border: 0;
+    }
+
+    #blockB {
+      margin: 0 5px; 
+    }
+
+    #blockC {
+      border: 5px solid black; 
+    }
+
+    /* Floating */
+    #container2 {
+      width: 800px; 
+    }
+
+    #blockD {
+      float: left; 
+      width: 75%; 
+    }
+
+    #blockE {
+      float: right; 
+      width: 25%; 
+    }
+
+    /* Positioning */
+    #blockG, #blockH {
+      float: left; 
+    }
+
+    #blockG {
+      position: relative; 
+      top: 50px;
+      left: 50px; 
+    }
+
+    #blockH {
+      position: fixed; 
+    }
   </style>
 
   <body>
